--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -6,7 +6,5 @@
   "bracketSpacing": true,
   "tabWidth": 2,
   "printWidth": 100,
-  "plugins": [
-    "prettier-plugin-tailwindcss"
-  ]
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
