--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,6 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript", "prettier", "plugin:prettier/recommended"]
+  "extends": ["next/core-web-vitals", "next/typescript", "prettier", "plugin:prettier/recommended"],
+  "rules": {
+    "@typescript-eslint/no-require-imports": 0
+  }
 }
