--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
   "extends": ["next/core-web-vitals", "next/typescript", "prettier", "plugin:prettier/recommended"],
   "rules": {
-    "@typescript-eslint/no-require-imports": 0
+    "@typescript-eslint/no-require-imports": 0,
+    "@typescript-eslint/no-empty-object-type": 0
   }
 }
